# hackathon-ledgerx

./: .gitignore  README.md  test-dashboard-api.sh  test-jupiter-v3-api.sh
backend/: .env.docker  (+12 more)
data-onchain-ingestor/: Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
data-onchain-ingestor/api/: main.py
data-onchain-ingestor/composes/: data_onchain_ingestor.yaml  data_onchain_ingestor_db_cache.yaml  database.yaml  init_s3.py  local.yaml  s3_local.yaml  temporal.yaml
data-onchain-ingestor/data_onchain_ingestor/: entrypoint.py  main.py
data-onchain-ingestor/data_onchain_ingestor/chains/evm/: evm_pipeline.py  pipeline.py
data-onchain-ingestor/data_onchain_ingestor/chains/providers/: helius.py  hypersync.py  rpc.py  solana_rpc.py  token_metadata.py
data-onchain-ingestor/data_onchain_ingestor/chains/solana/: solana_parser.py  solana_pipeline.py
data-onchain-ingestor/data_onchain_ingestor/config/: chain.py  config.py  environment.py
data-onchain-ingestor/data_onchain_ingestor/core/notification/: slack.py
data-onchain-ingestor/data_onchain_ingestor/core/pipeline/: address_registry.py  address_status.py  block_checkpoint.py  chain_service.py  financial_transaction_count.py  signature_checkpoint.py  sync_mode.py  token_service.py
data-onchain-ingestor/data_onchain_ingestor/core/storage/: cache.py  lakehouse.py  persistent.py
data-onchain-ingestor/data_onchain_ingestor/core/utility/: abi_decoder.py  block_search.py  exception_handler.py  hash.py  webhook.py
data-onchain-ingestor/data_onchain_ingestor/dto/: address_registry.py  financial_transaction.py  financial_transaction_count.py  financial_transaction_event_type.py  job_registry.py  sync_mode.py
data-onchain-ingestor/data_onchain_ingestor/sql/: script.sql
data-onchain-ingestor/tests/core/: main.py
data-onchain-ingestor/tests/core/cache/: cache.py
(+2584 files in other folders)
